@@ -3593,7 +3593,6 @@ sub handle_merge_targets
     &do_one_merge_target ('info', @info);
     &do_one_merge_target ('dvi', @dvi);
     &do_check_merge_target;
-    &do_one_merge_target ('installcheck', @installcheck);
 
     if (defined $options{'no-installinfo'})
     {
@@ -6527,7 +6526,6 @@ sub initialize_per_input
     @all = ();
     @check = ();
     @check_tests = ();
-    @installcheck = ();
 
     # Holds the dependencies of targets which dependencies are factored.
     # Typically, `.PHONY' will appear in plenty of *.am files, but must
@@ -6542,6 +6540,7 @@ sub initialize_per_input
        'install-man'	      => [],
        'uninstall-man'	      => [],
        'uninstall-am'         => [],
+       'installcheck-am'      => [],
 
        # Cleaning.
        'clean-am'             => [],
