@@ -1,6 +1,12 @@
 2001-02-26  Akim Demaille  <akim@epita.fr>
 
 	* automake.in (&handle_merge_targets, &do_one_merge_target): Don't
+	handle installcheck and installcheck-am.
+	* install.am: Do it.
+
+2001-02-26  Akim Demaille  <akim@epita.fr>
+
+	* automake.in (&handle_merge_targets, &do_one_merge_target): Don't
 	handle install and install-am.
 	* install.am: Do it.
 
